# ros_common_robin

./: README.md
gazebo_ros_control/: package.xml
ros_common_robin_bst/: CMakeLists.txt  package.xml
ros_common_robin_bst/include/ros_common_robin_bst/: Bs.cpp  Bs.h  Bs_coeffs.cpp  Bs_coeffs.h  Changelog.txt  README.md  bs_ex.cpp  bst.cpp  bst.doxy  bst.m  bst_sl.cpp  bst_sl_model.slx  bst_sl_test.m  bst_test.m  get_spl_fun.m  make.m
ros_common_robin_bst/include/ros_common_robin_bst/doxygen/html/: _bs_8h_source.html  _bs__coeffs_8h_source.html  annotated.html  bst_8cpp.html  bst_8cpp__incl.map  bst_8cpp__incl.md5  bst_8cpp_a6a215cbfde54f82a3ce599228fc3fce5_cgraph.map  bst_8cpp_a6a215cbfde54f82a3ce599228fc3fce5_cgraph.md5  bst_8h.html  bst_8h_source.html  class_bs-members.html  class_bs.html  class_bs__coeffs-members.html  class_bs__coeffs.html  class_bs__coeffs_a4126a4c2e6744d55ea9b4ae77e433237_icgraph.map  class_bs__coeffs_a4126a4c2e6744d55ea9b4ae77e433237_icgraph.md5  class_bs__coeffs_a7a79d06ee60c44e7c77b223fde626662_icgraph.dot  class_bs__coeffs_a7a79d06ee60c44e7c77b223fde626662_icgraph.map  class_bs__coeffs_a7a79d06ee60c44e7c77b223fde626662_icgraph.md5  class_bs__coeffs_a894b38ca5594b5f551542d2261d3c4dd_icgraph.map  class_bs__coeffs_a894b38ca5594b5f551542d2261d3c4dd_icgraph.md5  class_bs__coeffs_aa81da1b3e00691abd80ae9ef9e19bd27_icgraph.map  class_bs__coeffs_aa81da1b3e00691abd80ae9ef9e19bd27_icgraph.md5  class_bs__coeffs_ae49557877c01414bba362f0928a287f8_icgraph.map  class_bs__coeffs_ae49557877c01414bba362f0928a287f8_icgraph.md5  class_bs__coeffs_aeb70f0a76f37c8640bd54e1c2f07b1db_cgraph.map  class_bs__coeffs_aeb70f0a76f37c8640bd54e1c2f07b1db_cgraph.md5  class_bs__coeffs_aeb70f0a76f37c8640bd54e1c2f07b1db_icgraph.map  class_bs__coeffs_aeb70f0a76f37c8640bd54e1c2f07b1db_icgraph.md5  class_bs__coll__graph.map  class_bs__coll__graph.md5  class_bs_a032feb294f0120f3067d09b8b135e244_cgraph.map  class_bs_a032feb294f0120f3067d09b8b135e244_cgraph.md5  class_bs_a032feb294f0120f3067d09b8b135e244_icgraph.md5  class_bs_a11f26d4e11ce37db3ebf02a18e71e0b1_cgraph.map  class_bs_a11f26d4e11ce37db3ebf02a18e71e0b1_cgraph.md5  class_bs_a11f26d4e11ce37db3ebf02a18e71e0b1_icgraph.map  class_bs_a11f26d4e11ce37db3ebf02a18e71e0b1_icgraph.md5  class_bs_a3b2c18226b6a4cd61d44c87c0123823f_icgraph.map  class_bs_a3fd6e5a2c4db12c7bb1ae2123415601e_cgraph.map  (+52 more)
ros_common_robin_bst/include/ros_common_robin_bst/doxygen/html/search/: all_0.js  all_1.js  all_4.js  all_5.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  pages_0.js  searchdata.js  typedefs_1.js  variables_0.js  variables_1.js
ros_common_robin_clear_costmap/: CMakeLists.txt  package.xml
ros_common_robin_clear_costmap/launch/: clear_costmap.launch
ros_common_robin_clear_costmap/src/: clear_costmap.cpp
ros_common_robin_driver/: CMakeLists.txt  package.xml
ros_common_robin_driver/config/: odometry.yaml
ros_common_robin_driver/launch/: base_interface.launch  odometry.launch
ros_common_robin_driver/src/: robin_base_interface.cpp  robin_odometry_publisher_simulation_only.cpp
ros_common_robin_gazebo/: CMakeLists.txt  package.xml
ros_common_robin_msgs/: CMakeLists.txt  package.xml
ros_common_robin_thrustmaster/: CMakeLists.txt  package.xml
ros_common_robin_tools/: CMakeLists.txt  package.xml
ros_common_robin_tools/include/ros_common_robin_tools/: common_geometry_tools.h  common_tools.h
ros_common_robin_tools/src/: ros_common_robin_testsuite.cpp
ros_common_robin_velocity_smoother/: CMakeLists.txt  package.xml
ros_common_robin_velocity_smoother/cfg/: params.cfg
ros_common_robin_velocity_smoother/include/ros_common_robin_velocity_smoother/: velocity_smoother_nodelet.hpp
ros_common_robin_velocity_smoother/launch/: standalone.launch  test_translational_smoothing.launch  velocity_smoother.launch
ros_common_robin_velocity_smoother/plugins/: nodelets.xml
ros_common_robin_velocity_smoother/src/: velocity_smoother_nodelet.cpp
ros_common_robin_velocity_smoother/test/: test_translational_input.py
ros_common_robin_xbox360/: CMakeLists.txt  package.xml
ros_common_robin_xbox360/src/: teleop_joy.cpp
