<package>
  <name>gazebo_ros_control</name>
  <version>2.4.12</version>
  <description>modified version of gazebo_ros_control, fixes a dependencie problem when using gazebo7 with the omnirob_robin or mobrob_robin stack</description>

  <maintainer email="lukas.proprentner@gmail.com">Lukas Proprentner</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/gazebo_ros_control</url>
  <url type="bugtracker">https://github.com/ros-simulation/gazebo_ros_pkgs/issues</url>
  <url type="repository">https://github.com/ros-simulation/gazebo_ros_pkgs</url>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend> 
  <build_depend>std_msgs</build_depend>
  <build_depend>control_toolbox</build_depend> 
  <build_depend>controller_manager</build_depend> 
  <build_depend>pluginlib</build_depend> 
  <build_depend>hardware_interface</build_depend>
  <build_depend>transmission_interface</build_depend> 
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>angles</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>control_toolbox</run_depend> 
  <run_depend>controller_manager</run_depend> 
  <run_depend>pluginlib</run_depend> 
  <run_depend>hardware_interface</run_depend>
  <run_depend>transmission_interface</run_depend> 
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>angles</run_depend>

  <export>
    <gazebo_ros_control plugin="${prefix}/robot_hw_sim_plugins.xml"/>
  </export>
</package>
