<?xml version="1.0"?>
<package>
  <name>ros_common_robin_driver</name>
  <version>0.0.0</version>
  <description>The mobrob_robin_driver package</description>
  
  <maintainer email="lukas.proprentner@jku.at">Lukas Proprentner</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>ros_common_robin_msgs</build_depend>  
  
  <run_depend>roscpp</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>joint_state_controller</run_depend>  
  
  <export>
  </export>
</package>
