<?xml version="1.0"?>
<package>
  <name>ros_common_robin_msgs</name>
  <version>0.0.0</version>
  <description>The ros_common_robin_msgs package provides action, message and service description for the omnirob_robin and mobrob_robin.</description>

  <maintainer email="lukas.proprentner@jku.at">Lukas Proprentner</maintainer>
  
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>
  <build_depend>std_msgs</build_depend>  
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>
</package>
