<?xml version="1.0"?>
<package>
  <name>ros_common_robin_tools</name>
  <version>0.0.0</version>
  <description>The ros_common_robin_tools package</description>
  <maintainer email="omnirob@todo.todo">omnirob</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>

  </export>
</package>
