<?xml version="1.0"?>
<package>
  <name>ros_common_robin_tools</name>
  <version>0.0.0</version>
  <description>The ros_common_robin_tools package</description>
  <maintainer email="omnirob@todo.todo">omnirob</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>roscpp</run_depend>
  
  <export>

  </export>
</package>
