<package>
  <name>ros_common_robin_velocity_smoother</name>
  <version>0.7.5</version>
  <description>
     Bound incoming velocity messages according to robot velocity and acceleration limits.
     Extension of the yocs_velocity_smoother with added omnidirectional capabilities.
  </description>
  <author>Lukas Proprentner</author>
  <maintainer email="lukas.proprentner@jku.at">Lukas Proprentner</maintainer>
  <license>BSD</license>
  <url type="website">http://www.jku.at/robin/content</url>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>ecl_threads</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>ecl_threads</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  
  <export>
    <nodelet plugin="${prefix}/plugins/nodelets.xml"/>
  </export>
</package>
